# CloudServiceCars

./: .gitignore  Apache LICENSE  README.md
Documents/: IP-range.xls  VSProjectPlan.mpp  requirements_analysis
docker/: CMakeLists.txt  delete_data.ps1  delete_data.sh  docker-compose-dbstart-normal.yaml  docker-compose-init.yaml  docker-compose-start-rest.yaml  docker-compose.yaml  run.ps1  run.sh  stop.ps1  stop.sh
docker/Central/: CMakeLists.txt  Central.cpp  Central.h  Client.cpp  Makefile  SensorData.cpp  SensorData.h  cmake_install.cmake  dataproto.proto  dockerCentral
docker/Mariadb/: docker-compose-eld.yml  docker-compose-init.yaml  docker-compose-run.yaml  startDB.ps1
docker/Mariadb/node1d/mariadb.setup/: Provider.sql
docker/Mariadb/node2d/mariadb.setup/: Provider.sql
docker/Mariadb/node3d/mariadb.setup/: Provider.sql
docker/MqttBroker/: mosquitto.conf
docker/Provider/: CMakeLists.txt  Makefile  MariaDB.cpp  MariaDB.h  Provider.cpp  cmake_install.cmake  dataproto.proto  dockerProvider
docker/Sensor/: CMakeLists.txt  Makefile  Sensor.cpp  Sensor.h  cmake_install.cmake  dockerSensor
